--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -7,7 +7,7 @@
         <ResourceDictionary>
 
             <ResourceDictionary.MergedDictionaries>
-
+                <ResourceDictionary Source="styles/SidebarStyles.xaml"/>
                 <ResourceDictionary Source="styles/TextBox.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
