Fix: Home Page Interface

--- a/WpfApp1/Home.xaml
+++ b/WpfApp1/Home.xaml
@@ -30,12 +30,12 @@
                         </Image>
 
                         <StackPanel VerticalAlignment="Center">
-                            <TextBlock Text="Robert Fox" Foreground="White" FontWeight="Bold" Margin="0, 0, 0, 5"/>
+                            <TextBlock Name="ProfileName" Text="Robert Fox" Foreground="White" FontWeight="Bold" Margin="0, 0, 0, 5"/>
                             <TextBlock Text="View Profile" Foreground="White" FontSize="12"/>
                             <Border BorderBrush="White" BorderThickness="0,0,0,0.5" Width="Auto"/>
                         </StackPanel>
                     </StackPanel>
-
+                    
                     <TextBlock Text="MENU" Foreground="#EAEAEF" Margin="10,10,0,5" Opacity="0.85"/>
                     <StackPanel>
                         <Button Style="{StaticResource SidebarButtonStyle}" Content="Home" Tag="/icon/home.png"/>
@@ -65,7 +65,7 @@
                     <Grid>
                         <StackPanel HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0,0,0">
                             <TextBlock Text="Welcome to PatchUP," FontSize="24" Foreground="White" />
-                            <TextBlock Text="Username" FontSize="28" FontWeight="Bold" Foreground="White" Margin="0,5,0,0"/>
+                            <TextBlock Name="UsernameBinding" Text="Username" FontSize="28" FontWeight="Bold" Foreground="White" Margin="0,5,0,0"/>
                         </StackPanel>
 
                         <Grid HorizontalAlignment="Right" VerticalAlignment="Center" Width="300" Height="300">
@@ -79,7 +79,7 @@
                             </Ellipse>
                             <Ellipse Width="150" Height="150" VerticalAlignment="Center" HorizontalAlignment="Center">
                                 <Ellipse.Fill>
-                                    <ImageBrush ImageSource="/icon/user_image.png" />
+                                    <ImageBrush ImageSource="icon\user_image.png" />
                                 </Ellipse.Fill>
                             </Ellipse>
                         </Grid>
