--- a/WpfApp1/Home.xaml
+++ b/WpfApp1/Home.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="WpfApp1.Home"
+﻿<Page x:Class="WpfApp1.Home"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Home" Height="800" Width="1200">
-    <Grid>
+        Title="Home" Height="780" Width="1200" Background="#FFFFFF" >
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
@@ -38,12 +38,12 @@
                     
                     <TextBlock Text="MENU" Foreground="#EAEAEF" Margin="10,10,0,5" Opacity="0.85"/>
                     <StackPanel>
-                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Home" Tag="/icon/home.png"/>
-                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Saved Post" Tag="/icon/saved_post.png"/>
-                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Tutorial" Tag="/icon/tutorial.png"/>
-                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Community" Tag="/icon/community.png"/>
-                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Chatbot" Tag="/icon/chatbot_menu.png"/>
-                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Playlist" Tag="/icon/playlist.png"/>
+                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Home" Tag="/icon/home.png" Click="HomeClick"/>
+                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Saved Post" Tag="/icon/saved_post.png" Click="SavedPostClick"/>
+                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Tutorial" Tag="/icon/tutorial.png" Click="TutorialClick"/>
+                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Community" Tag="/icon/community.png" Click="CommunityClick"/>
+                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Chatbot" Tag="/icon/chatbot_menu.png" Click="ChatbotClick"/>
+                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Playlist" Tag="/icon/playlist.png" Click="PlaylistClick"/>
                     </StackPanel>
 
                     <Separator Margin="0,20,0,30" Background="Gray" Height="5"/>
@@ -51,7 +51,7 @@
                     <TextBlock Text="GENERAL" Foreground="#EAEAEF" Margin="10,0,0,5" Opacity="0.85" FontWeight="SemiBold"/>
                     <StackPanel>
                         <Button Style="{StaticResource SidebarButtonStyle}" Content="Settings" Tag="SettingsIcon"/>
-                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Help" Tag="HelpIcon"/>
+                        <Button Style="{StaticResource SidebarButtonStyle}" Content="Help" Tag="HelpIcon" Click="HelpClick"/>
                     </StackPanel>
                 </StackPanel>
 
@@ -125,4 +125,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</Window>
+</Page>
